--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@storybook/manager-webpack5": "^6.4.22",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/node": "^17.0.25",
     "@types/react": "18.0.6",
     "autoprefixer": "^10.4.7",
@@ -46,7 +47,7 @@
     "husky": "^7.0.4",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "^3.1.5",
     "typescript": "4.6.3"
   },
   "resolutions": {
