--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
     "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@types/node": "^17.0.25",
     "@types/react": "18.0.6",
     "autoprefixer": "^10.4.7",
