--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-react-typescript-tailwind-template",
+  "name": "kwota-code-test",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -13,9 +13,7 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write .",
-    "prepare": "husky install",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.5",
@@ -26,15 +24,6 @@
     "@babel/core": "^7.17.10",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@storybook/addon-actions": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^6.4.22",
-    "@storybook/manager-webpack5": "^6.4.22",
-    "@storybook/react": "^6.4.22",
-    "@storybook/testing-library": "^0.0.11",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/node": "^17.0.25",
@@ -44,7 +33,6 @@
     "cross-env": "^7.0.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
-    "eslint-plugin-storybook": "^0.5.11",
     "husky": "^7.0.4",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
